# cubehash

./: Cargo.toml  README.md
src/: consts.rs  cubehash.rs  main.rs  simd.rs  u32x4.rs
src/simd/: simd_opt.rs  simdint.rs  simdop.rs  simdty.rs
src/simd/simd_opt/: u32x4.rs
