[package]
name = "cubehash"
version = "0.1.0"
authors = ["Matthieu Crépeau <matthieu.crepeau@ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input-stream = "0.3.0"
hex = "0.4.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
