[package]
name = "cubehash"
version = "1.0.0"
description = "Cubehash hash functions"
authors = ["Matthieu Crepeau"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
digest = "0.9"
crypto-mac = "0.8"

[dev-dependencies]
digest = { version = "0.9", features = ["dev"] }
crypto-mac = { version = "0.8", features = ["dev"] }

[features]
default = ["std"]
std = ["digest/std", "crypto-mac/std"]
simd = []

[profile.release]
lto = "fat"
codegen-units = 1